chore: add rider files to gitignore and fix spelling

--- a/ExceptionAnalyzer.Tests/ExceptionAnalyzer.Tests.csproj
+++ b/ExceptionAnalyzer.Tests/ExceptionAnalyzer.Tests.csproj
@@ -22,7 +22,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\ExceptionAnalizer\ExceptionAnalyzer.csproj" />
+    <ProjectReference Include="..\ExceptionAnalyzer\ExceptionAnalyzer.csproj" />
   </ItemGroup>
 
 </Project>
