--- a/ExceptionAnalyzer/ExceptionAnalyzer.csproj
+++ b/ExceptionAnalyzer/ExceptionAnalyzer.csproj
@@ -1,14 +1,19 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>netstandard2.0</TargetFramework>
+        <TargetFramework>netstandard2.1</TargetFramework>
         <ImplicitUsings>disable</ImplicitUsings>
         <LangVersion>10</LangVersion>
     </PropertyGroup>
 
     <ItemGroup>
+      <None Include="..\.editorconfig" Link=".editorconfig" />
+    </ItemGroup>
+
+    <ItemGroup>
         <PackageReference Include="JetBrains.Annotations" Version="2022.3.1" />
-        <PackageReference Include="OpenAI" Version="1.7.2" />
+        <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+        <PackageReference Include="Rystem.OpenAi" Version="3.3.0" />
     </ItemGroup>
 
 </Project>
