--- a/BugfixAIProvider/BugfixAIProvider.csproj
+++ b/BugfixAIProvider/BugfixAIProvider.csproj
@@ -10,6 +10,7 @@
       <PackageReference Include="ICSharpCode.Decompiler" Version="8.0.0.7345" />
       <PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="7.0.8" />
       <PackageReference Include="Microsoft.AspNetCore.SignalR.Client.Core" Version="7.0.8" />
+      <PackageReference Include="Microsoft.AspNetCore.SignalR.Protocols.NewtonsoftJson" Version="7.0.8" />
     </ItemGroup>
 
     <ItemGroup>
