--- a/ExceptionAnalyzer.Tests/ExceptionAnalyzer.Tests.csproj
+++ b/ExceptionAnalyzer.Tests/ExceptionAnalyzer.Tests.csproj
@@ -9,6 +9,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="Microsoft.AspNetCore.SignalR.Protocols.NewtonsoftJson" Version="7.0.8" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.6.3" />
         <PackageReference Include="Moq" Version="4.18.4" />
         <PackageReference Include="Shouldly" Version="4.2.1" />
