--- a/ExceptionAnalyzer/ExceptionAnalyzer.csproj
+++ b/ExceptionAnalyzer/ExceptionAnalyzer.csproj
@@ -6,8 +6,7 @@
         <LangVersion>10</LangVersion>
         <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
         <AssemblyName>ExceptionAInalyzer</AssemblyName>
-        <ApplicationIcon>gfx\exceptionana200.ico</ApplicationIcon>
-        <PackageIcon>exceptionana200.png</PackageIcon>
+        <PackageIcon>..\logo.png</PackageIcon>
         <PackageProjectUrl>https://github.com/The-Unpredictables/ExceptionAnalyzer</PackageProjectUrl>
         <Description>ExceptionAnalyzer is a C# tool using the OpenAI API for interpreting complex data like error stack traces. It simplifies troubleshooting and error resolution by processing and clearly presenting relevant insights in a user-friendly way, benefiting both users and developers.</Description>
         <Copyright>Stefan S. Bechtel</Copyright>
@@ -19,30 +18,19 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <Content Include="gfx\exceptionana200.ico" />
-    </ItemGroup>
-
-    <ItemGroup>
       <None Include="..\LICENSE">
         <Pack>True</Pack>
         <PackagePath>\</PackagePath>
       </None>
-      <None Include="..\README.md">
-        <Pack>True</Pack>
-        <PackagePath>\</PackagePath>
-      </None>
+	    <None Include="..\README.md">
+		    <Pack>True</Pack>
+		    <PackagePath>\</PackagePath>
+	    </None>
     </ItemGroup>
 
     <ItemGroup>
         <PackageReference Include="JetBrains.Annotations" Version="2022.3.1" />
         <PackageReference Include="OpenAI" Version="1.7.2" />
-    </ItemGroup>
-
-    <ItemGroup>
-      <None Update="gfx\exceptionana200.png">
-        <Pack>True</Pack>
-        <PackagePath>\</PackagePath>
-      </None>
     </ItemGroup>
 
 </Project>
