--- a/ExceptionAInalyzer.Tests/ExceptionAInalyzer.Tests.csproj
+++ b/ExceptionAInalyzer.Tests/ExceptionAInalyzer.Tests.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
         <TargetFramework>net6.0</TargetFramework>
@@ -24,7 +24,7 @@
     </ItemGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\ExceptionAnalyzer\ExceptionAInalyzer.csproj" />
+        <ProjectReference Include="..\ExceptionAInalyzer\ExceptionAInalyzer.csproj" />
     </ItemGroup>
 
 </Project>
